# profile_aws_lf

./: README.md  main.py  pyproject.toml  run_demo.py
app/agents/: profile_agent.py
app/client/: a2a_client.py
app/tools/: profile_tools.py
app/utils/: intent.py  intent_llm.py
notebook/: 01.ipynb  01.py  02.py  Strands_A2A_Tools.ipynb
notebook/a2a_mini/: README.md  employee-agent-adv.py  employee-agent-bkup.py  employee-agent-structured-output.py  employee-agent.py  employee_data.py  hr-agent-bkup.py  hr-agent.py  server.py
notebook/misc_agents/: README.md  a2a_client.py  explain.md  notes.md  orchestrator-agent.py  profile-langgraph-agent copy.py  profile-langgraph-agent.py  profile-strands-agent copy.py  profile-strands-agent.py
tests/: postman.json  test_profile_agent.py
